--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" sizes="96x96" href="<%= webpackConfig.output.publicPath %>favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Vue Material Dashboard PRO by Creative Tim</title>
+    <title>Toby</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5, user-scalable=1">
 
     <!--     Fonts and icons     -->
@@ -31,7 +31,7 @@
 
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script defer data-site="https://vue-pro-tau.vercel.app/#" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   </head>
   <body class="sidebar-mini sidebar-image">
     <div id="app"></div>
